Use custom Exec tasks for native-image instead of graalvm plugin task system